# pageforge

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  run_deploy_workflow.sh  setup.py  styled_invoice_generator.py  test_docuforge.py  version.py  windsurf.md
.github/workflows/: ci.yml  deploy-pypi.yml  release.yml
.hypothesis/examples/9ecdaaf974758d7f/: 008b31862caaa960  0ab27c969b9e88ae  0f28b036724efae0  10813275232832e2  117c7c3a3e955747  15475fbbccfbf784  1bd4048cdffbd410  1ccf7419de1265fa  1f824b5097f53bb6  33fe6938c5bc796b  367ecd9412a2220a  3b860a1a02cef278  4462b3f1d63c00e8  4dded265219486b2  6bb92a6e41edd1f1  6d381299b70720f3  6d3fc8e4c1d0e33b  712029a41ab6aa11  77946dc558ab962e  781dd4ca5186e704  79110e804720603a  80b3ceb1071ba8f0  9566ad652b3fd4d2  95e01e9d82b71cd4  9d194d018441fb58  9faa3dc7b171a53b  a7721e8326710272  a7d4e9f3df683f4b  abbad42943730425  ae943b118a8dbffc  af5486951f6b5916  b065c70208f4eda8  bd1a2c6026f407cd  c1a0e943c6841203  c575d71c4d5bee1c  ca311094607658a8  d6db4a0d5fb678f9  db67b51b8d13d24c  ef7d04ba7a40655e  f0828908a18c0558  (+3 more)
docs/: api.md  conf.py  contributing.md  examples.md  index.md  index.rst  installation.md  introduction.md  production_guide.md  usage.md
examples/: llm_invoice_generator.py
src/docuforge/: __init__.py  api.py  builder.py  cli.py  config.py  fonts.py  fragments.py  logging_config.py  models.py  styles.py  templates.py
src/docuforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/docuforge/core/: __init__.py  builder.py  exceptions.py  models.py
src/docuforge/engines/: engine_base.py  reportlab_engine.py  weasyprint_engine.py
src/docuforge/rendering/: fonts.py
src/docuforge/templating/: __init__.py  fragments.py  template.py  templates.py
src/docuforge/tests/: test_fragments.py  test_templates.py
src/docuforge/utils/: __init__.py  logging_config.py  storage.py
src/pageforge/engines/: reportlab_engine.py  weasyprint_engine.py
src/pageforge/rendering/: __init__.py  styles.py
src/pageforge/templating/: fragments.py  templates.py
src/pageforge/utils/: config.py
tests/: conftest.py  test_benchmark.py  test_builder.py  test_custom_fonts_and_styles.py  test_engines.py  test_fragments.py  test_integration.py  test_large_images_and_stress.py  test_malformed_fields.py  test_models.py  test_property_based.py  test_storage.py  test_templates.py  test_unicode_and_rtl.py  test_visual_regression.py
